--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,12 +1,13 @@
 [phases.setup]
-nixPkgs = ["python311"]
+nixPkgs = [
+  "python311",
+  "python311Packages.pip"
+]
 
 [phases.install]
 cmds = [
-  "cd backend && python3 -m ensurepip",
-  "cd backend && python3 -m pip install --upgrade pip",
-  "cd backend && python3 -m pip install -r requirements.txt"
+  "cd backend && pip install -r requirements.txt"
 ]
 
 [start]
-cmd = "cd backend && python3 -m uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+cmd = "cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
