--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,13 +1,16 @@
 [phases.setup]
 nixPkgs = [
   "python311",
-  "python311Packages.pip"
+  "python311Packages.pip",
+  "python311Packages.virtualenv"
 ]
 
 [phases.install]
 cmds = [
+  "python -m venv /app/venv",
+  ". /app/venv/bin/activate",
   "cd backend && pip install -r requirements.txt"
 ]
 
 [start]
-cmd = "cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+cmd = "cd backend && . /app/venv/bin/activate && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
